--- a/tex/journal-version/manuscript.tex
+++ b/tex/journal-version/manuscript.tex
@@ -1286,7 +1286,7 @@ Section~\ref{sec:targeted-learning} as follows. We use the state
 learner to rank libraries of learners for the cause-specific
 cumulative hazard functions of tumor recurrence, death without tumor
 recurrence, and censoring.  The libraries of learners each include
-five learners: a Nelson-Aalen, three Cox regression models
+five learners: the Nelson-Aalen estimator, three Cox regression models
 (unpenalized, Lasso, Elastic net) each including additive effects of
 the 5 covariates (Section~\ref{sec:numer-exper}), and a random
 survival forest. We use the same set of learners to learn the
