--- a/tex/journal-version/manuscript.tex
+++ b/tex/journal-version/manuscript.tex
@@ -1338,7 +1338,7 @@ but that none of the estimated effects are statistically significant.
 
 \begin{figure}
   \centering%
-  \includeFigCond[width=.9\linewidth]{real-data-target.pdf}
+  \includeFigCond[width=1\linewidth]{real-data-target.pdf}
   \caption[]{Estimates of the average treatment effect of hormone therapy on the
     risk of tumor recurrence and death obtained from the prostate cancer study
     analysed by \cite{kattan2000pretreatment}. The estimates are based on the
